--- a/public/html/demo.html
+++ b/public/html/demo.html
@@ -2,12 +2,12 @@
 	<div class="row">
 		<div class="col-md-12">
 			<div class="page-header">
-				<h1>Demo <small>try it out online and for free</small></h1>
+				<h1>Online Demo <small>try it out without installation</small></h1>
 			</div>
 
 			<p class="lead">
-				Need to try <code>omp4j</code> before installation? No problem! Simply insert your code to the left area
-				and click translate button. The preprocessed text will appear in the right area. Easy as breathing.
+				Do you need to try <code>omp4j</code> before installation? No problem! Simply insert your code to the left area
+				and click translate button. The preprocessed code will appear in the right area. That's it!
 				Have fun!
 			</p>
 
@@ -15,14 +15,35 @@
 				Please note that the online code transformation is employed as a demo only and isn't meant as a public cloud.
 				The <strong>computation time is limited</strong> and <strong>only one file is supported</strong>. Also
 				<strong>public classes are forbidden</strong>.
-				You are asked to try only basic examples and share the computation power with other users. For more
-				complicated resources simply <a href="/download">download</a> the preprocessor and use it locally. Thank you.
 			</p>
 
+			<p>
+				<code>omp4j</code> is an open-source project that generates no profit. We host this webpage
+				at <a href="https://heroku.com" target="_blank">heroku</a> using their free plan. Therefore only
+				limited computation power is provided. We kindly ask you to use the demo for basic examples only.
+				Please don't forget that other uses may want to try it as well. For common usage and complicated
+				source code or multiple-file support, you may simply <a href="/download">download</a>
+				the preprocessor and use it locally as you wish. Thank you for your courtesy.
+			</p>
+
+			<!-- ------------------------------------------------------------------------------------------------------- -->
+			<hr/>
+			<h2>Terms of use <small>aka. it's our code now</small></h2>
+
 			<blockquote>
-				By clicking the translate button you agree to give up copyright of the code you require to preprocess.
-				Furthermore, you agree that the code may be stored, used, sold or whatever we want. It is our code now :)
+				By clicking the translate button you declare that you have the permission to use and share the source code
+				that will be preprocessed. Additionally, you agree to give all copyright of the code.
+				Furthermore, you agree that the code may be stored, used or sold by the author of <code>omp4j</code> - Petr Bělohlávek.
 			</blockquote>
+
+			<p>
+				Of course, using <code>omp4j</code> locally is 100% private and all copyrights remain yours. We just
+				don't want huge corporations to use this demo instead of regular free installation.
+			</p>
+
+			<!-- ------------------------------------------------------------------------------------------------------- -->
+			<hr/>
+			<h2>Demo <small>itself</small></h2>
 		</div>
 	</div>
 
