--- a/public/html/download.html
+++ b/public/html/download.html
@@ -5,20 +5,24 @@
 		</div>
 
 		<p class="lead">
-			Getting started with <code>omp4j</code> is very easy. Choose either a simple or a geeky version and let it run.
+			Getting started with <code>omp4j</code> is so easy. Choose either a regular or a geeky way and download
+			the preprocessor right now.
 		</p>
 
 		<!-- ------------------------------------------------------------------------------------------------------- -->
 		<hr/>
 		<h2>The Easy Way <small>recommended</small></h2>
 		<p>
-			The easiest way of obtaining <code>omp4j</code> is as follows.
+			Do you want to start using <code>omp4j</code> as fast as possible without any struggle? Simple follow
+			the steps below and get started in few seconds.
 		</p>
 
 		<ol>
 			<li>Make sure that a common JDK is installed (OracleJDK 7/8 or OpenJDK 6/7)</li>
 			<li>Download one of the listed JARs below (latest version suggested)</li>
 			<li>Create a shell alias for <code>omp4j</code> in form of <code>java -jar &lt;path-to-JAR&gt;</code></li>
+			<li>Learn how to use <code>omp4j</code> in the <a href="/tutorial">tutorial</a>!</li>
+
 		</ol>
 
 		<h3>Releases</h3>
@@ -30,8 +34,8 @@
 		<hr/>
 		<h2>The Hard Way <small>for hackers</small></h2>
 		<p>
-			If you for some reason intend to compile <code>omp4j</code> by yourself, follow these instructions. We expect
-			you to be an advanced UNIX user.
+			Do you want to hack <code>omp4j</code>? Why not! Follow the steps below in order to checkout the source code
+			and compile it by yourself. No rocket science!
 		</p>
 
 		<ol>
