--- a/public/html/tutorial.html
+++ b/public/html/tutorial.html
@@ -13,8 +13,14 @@
 		<hr/>
 		<h2>Options</h2>
 		<p class="lead">
-			All <code>javac</code> CLI options are supported. Additionally some others are provided.
+			You may use <code>omp4j</code> simply instead of <code>javac</code> as all CLI options are supported.
 		</p>
+
+		<p>
+			The invocation of <code>omp4j</code> from command line is really simple: <code>omp4j [options] file1 [other_iles]</code>
+			The following table describes additional flags that aren't supported by <code>javac</code>.
+		</p>.
+
 		<table class="table">
 			<tr>
 				<th>Short option</th>
