--- a/public/html/authors.html
+++ b/public/html/authors.html
@@ -25,7 +25,7 @@
 				Head developer
 			</td></tr>
 			<tr><td>
-				<a href="mailto:omp4j [at] petrbel.cz" target="_blank">omp4j [at] petrbel.cz</a>
+				<a href="mailto:omp4j%20at%20petrbel.cz" target="_blank">omp4j [at] petrbel.cz</a>
 			</td></tr>
 			<tr><td>
 				<a href="http://www.petrbel.cz" target="_blank">www.petrbel.cz</a>
@@ -35,16 +35,16 @@
 	<div class="col-md-4 col-md-offset-2" style="margin-bottom: 20px;">
 		<table class="table table-striped table-hover table-responsive text-center"><tbody>
 			<tr><td>
-				<strong>Mgr. Antonín Steinhauser</strong>
+				<strong>JUDr. Antonín Steinhauser</strong>
 			</td></tr>
 			<tr><td>
 				Project supervisor
 			</td></tr>
 			<tr><td>
-				<a href="mailto:steinhauser [at] d3s.mff.cuni.czz" target="_blank">steinhauser [at] d3s.mff.cuni.cz</a>
+				<a href="mailto:steinhauser%20at%20d3s.mff.cuni.cz" target="_blank">steinhauser [at] d3s.mff.cuni.cz</a>
 			</td></tr>
 			<tr><td>
-				<a href="http://d3s.mff.cuni.cz/~steinhauser/" target="_blank">http://d3s.mff.cuni.cz/~steinhauser/</a>
+				<a href="http://d3s.mff.cuni.cz/~steinhauser" target="_blank">http://d3s.mff.cuni.cz/~steinhauser</a>
 			</td></tr>
 		</tbody></table>
 	</div>
