--- a/public/html/download.html
+++ b/public/html/download.html
@@ -26,9 +26,26 @@
 		</ol>
 
 		<h3>Releases</h3>
-		<ul>
-			<li><a href="#">0.1</a></li>
-		</ul>
+		<table class="table">
+			<tr>
+				<th>Release</th>
+				<th>JAR download</th>
+				<th>JAR size</th>
+				<th>Release date</th>
+				<th>Release notes</th>
+				<th>Source download</th>
+				<th>Source</th>
+			</tr>
+			<tr>
+				<td>v1.0</td>
+				<td><a href="https://github.com/omp4j/omp4j/releases/download/v1.0/omp4j-1.0.jar">omp4j-1.0.jar</a></td>
+				<td>7.99MB</td>
+				<td>2015/05/08</td>
+				<td><a href="https://github.com/omp4j/omp4j/releases/tag/v1.0" target="_blank">v1.0 release notes</a></td>
+				<td><a href="https://github.com/omp4j/omp4j/archive/v1.0.zip">omp4j-0.1.zip</a></td>
+				<td><a href="https://github.com/omp4j/omp4j/tree/v1.0" target="_blank">GitHub</a></td>
+			</tr>
+		</table>
 
 		<!-- ------------------------------------------------------------------------------------------------------- -->
 		<hr/>
