--- a/public/html/tutorial.html
+++ b/public/html/tutorial.html
@@ -444,5 +444,9 @@ public class Example8 {
 
 		</div>
 
+		<p class="lead">
+			Hungry for more examples? Are these too simple? Check out the <a href="https://github.com/omp4j/omp4j/tree/master/example" target="_blank">example</a> directory on <a href="https://github.com/omp4j/omp4j" target="_blank">Github</a>.
+		</p>
+
 	</div>
 </div>
