--- a/public/html/tutorial.html
+++ b/public/html/tutorial.html
@@ -203,7 +203,7 @@
 				<div id="collapseOne" class="panel-collapse collapse in" role="tabpanel" aria-labelledby="headingOne">
 					<div class="panel-body">
 						<pre>
-public class Example1 {
+class Example1 {
 	public static void main(String[] args) {
 
 		int foo = 5;
@@ -235,7 +235,7 @@ public class Example1 {
 				<div id="collapseTwo" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingTwo">
 					<div class="panel-body">
 						<pre>
-public class Example2 {
+class Example2 {
 	public static void main(String[] args) {
 
 		// omp parallel for
@@ -262,7 +262,7 @@ public class Example2 {
 				<div id="collapseThree" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 					<div class="panel-body">
 						<pre>
-public class Example3 {
+class Example3 {
 	public static void main(String[] args) {
 		// omp sections
 		{
@@ -304,7 +304,7 @@ public class Example3 {
 				<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 					<div class="panel-body">
 						<pre>
-public class Example4 {
+class Example4 {
 	public static void main(String[] args) {
 		// omp parallel
 		{
@@ -335,7 +335,7 @@ public class Example4 {
 				<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 					<div class="panel-body">
 						<pre>
-public class Example5 {
+class Example5 {
 	public static void main(String[] args) {
 		// omp parallel
 		{
@@ -366,7 +366,7 @@ public class Example5 {
 				<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 					<div class="panel-body">
 						<pre>
-public class Example16 {
+class Example6 {
 	public static void main(String[] args) {
 		// omp parallel
 		{
@@ -400,7 +400,7 @@ public class Example16 {
 				<div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 					<div class="panel-body">
 						<pre>
-public class Example7 {
+class Example7 {
 	/** Let's assume that we have e.g. 8 core computer and need to run parallel section only twice */
 	public static void main(String[] args) {
 
@@ -429,7 +429,7 @@ public class Example7 {
 				<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
 					<div class="panel-body">
 						<pre>
-public class Example8 {
+class Example8 {
 	public static void main(String[] args) {
 		// omp parallel
 		{
