--- a/public/html/download.html
+++ b/public/html/download.html
@@ -37,6 +37,15 @@
 				<th>Source</th>
 			</tr>
 			<tr>
+				<td>v1.1</td>
+				<td><a href="https://github.com/omp4j/omp4j/releases/download/v1.1/omp4j-1.1.jar">omp4j-1.1.jar</a></td>
+				<td>7.99MB</td>
+				<td>2015/05/17</td>
+				<td><a href="https://github.com/omp4j/omp4j/releases/tag/v1.1" target="_blank">v1.1 release notes</a></td>
+				<td><a href="https://github.com/omp4j/omp4j/archive/v1.1.zip">omp4j-1.1.zip</a></td>
+				<td><a href="https://github.com/omp4j/omp4j/tree/v1.1" target="_blank">GitHub</a></td>
+			</tr>
+			<tr>
 				<td>v1.0</td>
 				<td><a href="https://github.com/omp4j/omp4j/releases/download/v1.0/omp4j-1.0.jar">omp4j-1.0.jar</a></td>
 				<td>7.99MB</td>
