--- a/public/html/tutorial.html
+++ b/public/html/tutorial.html
@@ -171,11 +171,11 @@
 				<th>Meaning</th>
 			</tr>
 			<tr>
-				<td><code>OMP_THREAD_NUM</code></td>
+				<td><code>OMP4J_THREAD_NUM</code></td>
 				<td>Integer representing current thread ID</td>
 			</tr>
 			<tr>
-				<td><code>OMP_NUM_THREADS</code></td>
+				<td><code>OMP4J_NUM_THREADS</code></td>
 				<td>Integer representing current number of threads</td>
 			</tr>
 		</table>
@@ -296,12 +296,12 @@ class Example3 {
 			<div class="panel panel-default">
 				<div class="panel-heading" role="tab" id="headingFour">
 					<h4 class="panel-title">
-						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseThree">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
 							Critical section
 						</a>
 					</h4>
 				</div>
-				<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+				<div id="collapseFour" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFour">
 					<div class="panel-body">
 						<pre>
 class Example4 {
@@ -327,12 +327,12 @@ class Example4 {
 			<div class="panel panel-default">
 				<div class="panel-heading" role="tab" id="headingFive">
 					<h4 class="panel-title">
-						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseThree">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
 							Barrier example
 						</a>
 					</h4>
 				</div>
-				<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+				<div id="collapseFive" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingFive">
 					<div class="panel-body">
 						<pre>
 class Example5 {
@@ -358,12 +358,12 @@ class Example5 {
 			<div class="panel panel-default">
 				<div class="panel-heading" role="tab" id="headingSix">
 					<h4 class="panel-title">
-						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseThree">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
 							Single/master example
 						</a>
 					</h4>
 				</div>
-				<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+				<div id="collapseSix" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSix">
 					<div class="panel-body">
 						<pre>
 class Example6 {
@@ -392,12 +392,12 @@ class Example6 {
 			<div class="panel panel-default">
 				<div class="panel-heading" role="tab" id="headingSeven">
 					<h4 class="panel-title">
-						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseThree">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
 							Thread number limitation
 						</a>
 					</h4>
 				</div>
-				<div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+				<div id="collapseSeven" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingSeven">
 					<div class="panel-body">
 						<pre>
 class Example7 {
@@ -421,19 +421,19 @@ class Example7 {
 			<div class="panel panel-default">
 				<div class="panel-heading" role="tab" id="headingEight">
 					<h4 class="panel-title">
-						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseThree">
+						<a class="collapsed" data-toggle="collapse" data-parent="#accordion" href="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
 							Thread-ID macros example
 						</a>
 					</h4>
 				</div>
-				<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingThree">
+				<div id="collapseEight" class="panel-collapse collapse" role="tabpanel" aria-labelledby="headingEight">
 					<div class="panel-body">
 						<pre>
 class Example8 {
 	public static void main(String[] args) {
 		// omp parallel
 		{
-			System.out.println("Thread #" + OMP_THREAD_NUM + "/" + OMP_NUM_THREADS);
+			System.out.println("Thread #" + OMP4J_THREAD_NUM + "/" + OMP4J_NUM_THREADS);
 		}
 	}
 }
